--- a/src/app/auth/sing-up/sing-up.component.html
+++ b/src/app/auth/sing-up/sing-up.component.html
@@ -1,26 +1,41 @@
 <!--  -->
 <h3> Create an Account!!!</h3>
 
-<form class="ui form" [formGroup]="authForm"> 
+<form (ngSubmit)="onSubmit()" class="ui form" [formGroup]="authForm"> 
 
-    <div class="field">
-        <label>Username:</label>
-        <input formControlName="username"/>
-    </div>
-    {{ authForm.get('username').errors | json }}
-    <div class="field">
-        <label>Password:</label>
-        <input formControlName="password"/>
-    </div>
-    {{ authForm.get('password').errors | json }}
-    <div class="field">
-        <label>Password Confirmation:</label>
-        <input formControlName="passwordConfirmation"/>
-    </div>
-    {{ authForm.get('passwordConfirmation').errors | json }}
-    <button class="ui submit button primary">
-        Submit
-    </button>
+    <app-input 
+        inputType="text" 
+        label="Username:"
+        [control]="authForm.get('username')"
+    ></app-input>
+    <app-input  
+        inputType="password"
+        label="Password:"
+        [control]="authForm.get('password')"
+    ></app-input>
+    <app-input  
+        inputType="password"
+        label="Password Confirmation:"
+        [control]="authForm.get('passwordConfirmation')"
+    ></app-input>
 
-    {{ authForm.errors | json }}
+    <div 
+        *ngIf="
+            authForm.get('password').touched && 
+            authForm.get('passwordConfirmation').touched &&
+            authForm.errors
+        "
+        class="ui red basic label"
+    >
+        <p *ngIf="authForm.errors.passwordDontMatch">
+            Password and Password Confirmation must match.
+        </p>
+    </div>
+   
+    <div>
+        <button class="ui submit button primary">
+            Submit
+        </button> 
+    </div>
+   
 </form>
