--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -1,1 +1,33 @@
-<p>input works!</p>
+<div class="field">
+    <label> {{ label }} </label>
+    <input [type]="inputType" [formControl]="control" />
+
+    <div *ngIf="showErrors()" class="ui pointing red basic label">
+        <p *ngIf="control.errors.required">
+            Value is required.
+        </p>
+        <p *ngIf="control.errors.minlength">
+            Value you entered is
+            {{ control.errors.minlength.actualLength }}
+            characters long, it must be at least
+            {{ control.errors.minlength.requiredLength }}
+            characters long.
+        </p>
+        <p *ngIf="control.errors.maxlength">
+            Value you entered is
+            {{ control.errors.maxlength.actualLength }}
+            characters long, it cannot be more than
+            {{ control.errors.maxlength.requiredLength }}
+            characters long.
+        </p>
+        <p *ngIf="control.errors.pattern">
+            Invalid Format.
+        </p>
+        <p *ngIf="control.errors.nonUniqueUsername">
+            Username is taken.
+        </p>
+        <p *ngIf="control.errors.noConnection">
+            Can't tell if the username is taken.
+        </p>
+    </div>
+</div>
