errorsin the code correcteds

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
                 >
                     Inbox
                 </a>
-                <a routerLink="/singOut" routerLinkActive="active" class="ui item">
+                <a routerLink="/singout" routerLinkActive="active" class="ui item">
                     Sing Out
                 </a>
             </ng-container>
