--- a/src/app/auth/sing-up/sing-up.component.html
+++ b/src/app/auth/sing-up/sing-up.component.html
@@ -4,16 +4,19 @@
 <form (ngSubmit)="onSubmit()" class="ui form" [formGroup]="authForm"> 
 
     <app-input 
+        controlType = 'input'
         inputType="text" 
         label="Username:"
         [control]="authForm.get('username')"
     ></app-input>
     <app-input  
+        controlType = 'input'
         inputType="password"
         label="Password:"
         [control]="authForm.get('password')"
     ></app-input>
     <app-input  
+        controlType = 'input'
         inputType="password"
         label="Password Confirmation:"
         [control]="authForm.get('passwordConfirmation')"
