--- a/src/app/inbox/email-show/email-show.component.html
+++ b/src/app/inbox/email-show/email-show.component.html
@@ -1,4 +1,4 @@
-<div class="header" *ngIf="email">
+<div class="header">
     <div>
         <h3>
             {{ email.subject }}
@@ -11,3 +11,5 @@
         </div>
     </div>
 </div>
+<div class="ui divider"></div>
+<div [innerHTML]="email.html"></div>
