--- a/src/app/inbox/email-show/email-show.component.html
+++ b/src/app/inbox/email-show/email-show.component.html
@@ -10,6 +10,10 @@
             To: <i>{{ email.to }}</i>
         </div>
     </div>
+    <div>
+        <app-email-reply [email]="email"></app-email-reply>
+    </div>
 </div>
+
 <div class="ui divider"></div>
 <div [innerHTML]="email.html"></div>
